Fix menu overlapping logo

--- a/resources/css/nav.scss
+++ b/resources/css/nav.scss
@@ -65,6 +65,7 @@
 
     .leap-logo {
         position: sticky;
+        z-index: 2;
         top: 0;
     }
 
